--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>2019</title>
+    <title>Midt Lyd og Lys</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/main.css" />
     <link
@@ -15,40 +15,29 @@
     <div class="wrapper">
       <div class="parallax__group hero-container">
         <div class="parallax__layer sky"></div>
-        <div class="parallax__layer bushes"></div>
-        <div class="parallax__layer water"></div>
         <div class="parallax__layer people1"></div>
-        <div class="parallax__layer people2"></div>
-        <div class="parallax__layer people3"></div>
         <div class="parallax__layer hero-text">
-          <h2>Level Up Inc.</h2>
+          <h2>Midt Lyd & Lys</h2>
           <ul>
-            <li><a href="#">Passions</a></li>
-            <li><a href="#">Goals</a></li>
-            <li><a href="#" class="btn">Get Started Now</a></li>
+            <li><a href="#">Nyheter</a></li>
+            <li><a href="#">Utstyr</a></li>
+            <li><a href="#">Hvem er vi</a></li>
+            <li><a href="#" class="btn">Kontakte oss</a></li>
           </ul>
           <div class="year-container">
-            <h1>2</h1>
-            <h1>0</h1>
-            <h1>1</h1>
-            <h1>9</h1>
+            <h1>Lyd & Lys til ditt event</h1>
           </div>
           <div class="social-container">
-            <a href="https://github.com/KiaanCastillo" target="_blank"
-              ><i class="icon ion-logo-github"></i
-            ></a>
-            <a href="https://www.instagram.com/craftedbykiaan/" target="_blank"
+            <a href="#" target="_blank"
               ><i class="icon ion-logo-instagram"></i
             ></a>
-            <a href="https://dribbble.com/kiaancastillo" target="_blank"
-              ><i class="icon ion-logo-dribbble"></i
-            ></a>
-            <a href="https://www.youtube.com/c/KiaanCastillo" target="_blank"
-              ><i class="icon ion-logo-youtube"></i
+            <a href="https://www.facebook.com/midtlydoglys/" target="_blank"
+              ><i class="icon ion-logo-facebook"></i
             ></a>
           </div>
         </div>
       </div>
+      
       <div class="parallax__group info-container">
         <img src="./img/concert.jpg" alt="Lively and colourful concert" />
         <div class="text-container">
