--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="parallax__group hero-container">
-        <div class="parallax__layer sky"></div>
+      <div class="parallax__group banner-container">
+        <div class="parallax__layer scene"></div>
         <div class="parallax__layer people1"></div>
-        <div class="parallax__layer hero-text">
+        <div class="parallax__layer banner-text">
           <h2>Midt Lyd & Lys</h2>
-          <ul>
-            <li><a href="#">Nyheter</a></li>
-            <li><a href="#">Utstyr</a></li>
-            <li><a href="#">Hvem er vi</a></li>
-            <li><a href="#" class="btn">Kontakte oss</a></li>
-          </ul>
+          <div class="primary-menu">
+            <ul>
+              <li><a href="#">Nyheter</a></li>
+              <li><a href="#">Utstyr</a></li>
+              <li><a href="#">Hvem er vi</a></li>
+              <li><a href="#" class="btn">Kontakte oss</a></li>
+            </ul>
+        </div>
+        <div class="smallscreen-menu">
+asdf
+        </div>
           <div class="year-container">
             <h1>Lyd & Lys til ditt event</h1>
           </div>
