--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
       <div class="parallax__group banner-container">
         <div class="parallax__layer scene"></div>
         <div class="parallax__layer people1"></div>
+        <div class="parallax__layer title-container"></div>
         <div class="parallax__layer banner-text">
-          <h2>Midt Lyd & Lys</h2>
-          <div class="primary-menu">
-            <ul>
+
+            <ul clas="primary-navigation">
               <li><a href="#">Nyheter</a></li>
               <li><a href="#">Utstyr</a></li>
               <li><a href="#">Hvem er vi</a></li>
               <li><a href="#" class="btn">Kontakte oss</a></li>
             </ul>
-        </div>
-        <div class="smallscreen-menu">
-asdf
-        </div>
-          <div class="year-container">
+
+
+
+          <div class="subtitle-container">
             <h1>Lyd & Lys til ditt event</h1>
           </div>
           <div class="social-container">
@@ -43,7 +42,7 @@ asdf
         </div>
       </div>
       
-      <div class="parallax__group info-container">
+      <div class="parallax__group content-container">
         <img src="./img/concert.jpg" alt="Lively and colourful concert" />
         <div class="text-container">
           <h2>This is your year.</h2>
